salvage_output.txt
/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:859
    return new TSError(diagnosticText, diagnosticCodes, diagnostics);
           ^
TSError: тип Unable to compile TypeScript:
scripts/salvage_videos_reel.ts(34,29): error TS2554: Expected 2-3 arguments, but got 1.

    at createTSError (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:859:12)
    at reportTSError (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:863:19)
    at getOutput (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:1077:36)
    at Object.compile (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:1433:41)
    at Module.m._compile (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:1617:30)
    at Module._extensions..js (node:internal/modules/cjs/loader:1892:10)
    at Object.require.extensions.<computed> [as .ts] (/Users/user1000/gitprojects/InstagramReelPoster/node_modules/ts-node/src/index.ts:1621:12)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14) {
  diagnosticCodes: [ 2554 ]
}
